--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,10 @@
 @import url(https://maxcdn.bootstrapcdn.com/bootstrap/3.3.5/css/bootstrap.min.css);
 
-a[role='menuitem'] {
-    cursor: pointer
+.axis line, .axis path {
+  fill: none;
+  stroke: #000;
+}
+
+.title {
+	text-anchor:middle;
 }
